adding npc's quest (but it must be completed in NPCQuests in server side